# xdisk

./: README.md
src/: CMakeLists.txt  vcpkg.json
src/cmake/: CommonTools.cmake
src/xcom/: CMakeLists.txt
src/xcom/include/: XComTask.h  XCom_Global.h  XDirTask.h  XDownLoadTask.h  XFileServerTask.h  XMsg.h  XServerTask.h  XThread.h  XThreadPool.h  XTools.h  XUploadTask.h
src/xcom/src/: XComTask.cpp  XDirTask.cpp  XDownLoadTask.cpp  XFileServerTask.cpp  XServerTask.cpp  XThread.cpp  XThreadPool.cpp  XUploadTask.cpp
src/xdisk_client/: CMakeLists.txt
src/xdisk_client/include/: XDiskClient.h  XDiskGui.h
src/xdisk_client/src/: XDiskClient.cpp  XDiskGui.cpp  main.cpp
src/xdisk_server/: CMakeLists.txt
src/xdisk_server/src/: main.cpp
